# solana-entropy-vrf

./: .gitignore  Anchor.toml  Cargo.toml  README.md
programs/entropy/: Cargo.toml
programs/entropy/src/: constants.rs  crank.rs  fetch.rs  init.rs  lib.rs  request.rs  utils.rs
rust/entropy-test/: Cargo.toml
rust/entropy-test/src/: constants.rs  main.rs  opts.rs  test1.rs
rust/entropy_vrf_crank/: Cargo.toml
rust/entropy_vrf_crank/src/: main.rs  operate_crank.rs  opt.rs  utils.rs
