[package]
name = "entropy"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "entropy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.24.2", features = ["init-if-needed"]}
pyth-client = {version = "0.5.0", features = ["no-entrypoint"]}
hex = "0.4.3"
