[package]
name = "entropy_vrf_crank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
structopt = "0.3.23"
env_logger = "0.9.0"
anyhow = "1.0.56"
log = "0.4.16"
crossbeam = "0.8.1"

anchor-client = "0.24.2"
entropy = { path = "../../programs/entropy", features = ["no-entrypoint"] }
